# Flask-Smorest-API

./: .dockerignore  .flaskenv  .gitignore  Dockerfile  Jenkinsfile  docker-compose.yaml  entry_point_dev.sh  entry_point_prod.sh  pyproject.toml  readme.md  settings.py  tasks.py  test_redis.py  trigger_build.sh
migrations/versions/: 00fed5622fb2_.py  0f359051713a_.py  2d05e7aa54b1_.py  2d5849dc707d_.py  37551b018cfa_.py  3a763ed83d51_.py  4ae17205d660_.py  4cf52affa9ec_.py  572b8b8dd908_.py  611794ccd8b4_.py  64f6aeb1e351_.py  6a4f57076ac5_.py  81e6344b4ee1_.py  88b086711a82_.py  89b8e4515b52_.py  9dd162b8cd5c_.py  a33aedfa0101_.py  aa103ddda267_.py  c032589f4d4c_.py  ccbee36b332d_.py  d02260446827_.py  dd6c7ea1f8ab_.py  eb9aa2cdac3e_.py  f8e21bd0389c_.py
restapi/: __init__.py  application.py  asgi.py  main_views.py  prod_entry_point.sh  settings.py  store_views.py
restapi/blocklists/: blocklist.py
restapi/constants/: status_codes.py
restapi/models/: __init__.py  item.py  item_tags.py  store.py  tag.py  user.py
restapi/resources/: __init__.py  item.py  store.py  tag.py  user.py
restapi/schemas/: schemas.py
restapi/templates/: home.html
restapi/templates/email/: action.html  registration.html
